overflow bug in chrome mobile fix

--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body, header, svg, div, p, a, h1, h2, img, figure, ul, li, footer{
 
 /* header*/
 body{
+	width: 100%;
 	background-color: black;
 	display: flex;
 	flex-direction: column;
@@ -38,9 +39,9 @@ header{
 }
 
 .headerDelay{
-	animation: header_delay 6s linear 0s 1 forwards ;
 	-webkit-animation: header_delay 6s linear 0s 1 forwards ;
 	-moz-animation: header_delay 6s linear 0s 1 forwards;
+	animation: header_delay 6s linear 0s 1 forwards ;
 }
 
 header:hover{
